--- a/app/swarmapp/CMakeLists.txt
+++ b/app/swarmapp/CMakeLists.txt
@@ -11,7 +11,7 @@ Please see the license file at the root of this repository, or at:
 
 # Swarm test
 add_executable(swarmapp swarmapp.cc)
-target_link_libraries(swarmapp portage)
+target_link_libraries(swarmapp PRIVATE portage)
 
 # Compare
 add_executable(swarmcompare swarmcompare.cc)
@@ -22,9 +22,9 @@ if(ENABLE_PROFILE)
   set(VTUNE_INCLUDE_DIR "${HOME}" CACHE PATH "Set the locaiton of VTune include")
   set(VTUNE_LIB "${HOME}" CACHE STRING "Set the VTune library")
 
-  include_directories(${VTUNE_INCLUDE_DIR})
+  target_include_directories(swarmcompare PRIVATE ${VTUNE_INCLUDE_DIR})
 
-  target_link_libraries(swarmapp ${VTUNE_LIB})
+  target_link_libraries(swarmapp PRIVATE ${VTUNE_LIB})
 endif(ENABLE_PROFILE)
 
 
