--- a/app/timingapp/CMakeLists.txt
+++ b/app/timingapp/CMakeLists.txt
@@ -24,7 +24,7 @@ if (WONTON_ENABLE_Jali AND WONTON_ENABLE_MPI)
     set(VTUNE_INCLUDE_DIR "${HOME}" CACHE PATH "Set the locaiton of VTune include")
     set(VTUNE_LIB "${HOME}" CACHE STRING "Set the VTune library")
 
-    include_directories(${VTUNE_INCLUDE_DIR})
-    target_link_libraries(timingapp ${VTUNE_LIB})
+    target_include_directories(timingapp PRIVATE ${VTUNE_INCLUDE_DIR})
+    target_link_libraries(timingapp PRIVATE ${VTUNE_LIB})
   endif()
 endif()
