--- a/app/portageapp/test/CMakeLists.txt
+++ b/app/portageapp/test/CMakeLists.txt
@@ -113,7 +113,7 @@ if (ENABLE_MPI AND Jali_DIR)
 endif (ENABLE_MPI AND Jali_DIR)
 
 #multi-material tests
-if (Jali_DIR AND TANGRAM_FOUND)
+if (WONTON_ENABLE_Jali AND PORTAGE_ENABLE_TANGRAM AND TANGRAM_ENABLE_XMOF2D)
   file(COPY portageapp_multimat_jali_unstruc_2d_cell_f1_r2.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
   file(COPY gold/GOLD_multimat_jali_unstruc_2d_cell_f1_r2.gmv DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
   file(COPY ../../../test_data/reg10x10.exo
@@ -140,7 +140,7 @@ if (Jali_DIR AND TANGRAM_FOUND)
     TESTAPPDIR=${CMAKE_CURRENT_BINARY_DIR}/..
     CMPAPPDIR=${CMAKE_BINARY_DIR}/app/apptest_cmp)
 
-endif (Jali_DIR AND TANGRAM_FOUND)
+endif ()
 
 ####################################################################
 
