--- a/app/momentumapp/test/CMakeLists.txt
+++ b/app/momentumapp/test/CMakeLists.txt
@@ -39,4 +39,6 @@ ADD_MOMENTUM_TEST(2D 1)
 ADD_MOMENTUM_TEST(3D 0)
 ADD_MOMENTUM_TEST(3D 1)
 
-ADD_MOMENTUM_TEST(MM 0)
+if (PORTAGE_HAS_TANGRAM)
+  ADD_MOMENTUM_TEST(MM 0)
+endif()
