--- a/portage/search/CMakeLists.txt
+++ b/portage/search/CMakeLists.txt
@@ -7,43 +7,48 @@ Please see the license file at the root of this repository, or at:
 
 project(portage_search)
 
-add_library(portage_search)
-
 # Add header files
 set(search_HEADERS
     search_simple.h
     search_direct_product.h
     search_kdtree.h
-    search_simple_points.h
-    search_points_by_cells.h
     kdtree.h
-    pile.hh
-    lretypes.hh
-    pairs.hh
     BoundBox.h
-    search_swept_face.h
-    pairs.hh
-)
+    search_swept_face.h)
 
-# Add source files
-set(search_SOURCES
-    pairs.cc
-)
+if (WONTON_ENABLE_KOKKOS)
+  add_library(portage_search)
 
-target_include_directories(portage_search PUBLIC
-  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIRECTORY}>
-  $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
-  $<INSTALL_INTERFACE:include>
-  )
+  set(search_HEADERS
+      ${search_HEADERS}
+      search_simple_points.h
+      search_points_by_cells.h
+      pile.hh
+      lretypes.hh
+      pairs.hh)
 
-target_sources(portage_search PRIVATE "${search_SOURCES}")
+  set(search_SOURCES pairs.cc)
 
+  target_include_directories(portage_search PUBLIC
+      $<BUILD_INTERFACE:${PROJECT_SOURCE_DIRECTORY}>
+      $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
+      $<INSTALL_INTERFACE:include>)
+
+  target_sources(portage_search PRIVATE "${search_SOURCES}")
+
+else()
+  add_library(portage_search INTERFACE)
+
+  target_include_directories(portage_search INTERFACE
+      $<BUILD_INTERFACE:${PROJECT_SOURCE_DIRECTORY}>
+      $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
+      $<INSTALL_INTERFACE:include>)
+
+  target_link_libraries(portage_search INTERFACE portage_support)
+endif()
 
 set_target_properties(portage_search PROPERTIES
   PUBLIC_HEADER "${portage_search_HEADERS}")
-
-
-target_link_libraries(portage_search PUBLIC portage_support)
 
 target_link_libraries(portage INTERFACE portage_search)
 
@@ -85,17 +90,19 @@ if(ENABLE_UNIT_TESTS)
     LIBRARIES portage_search 
     POLICY SERIAL)
 
-  cinch_add_unit(test_search_simple_points
-    SOURCES test/test_search_simple_points.cc
-    LIBRARIES portage_search  
-    POLICY MPI
-    THREADS 1)
+  if (WONTON_ENABLE_KOKKOS)
+    cinch_add_unit(test_search_simple_points
+      SOURCES test/test_search_simple_points.cc
+      LIBRARIES portage_search
+      POLICY MPI
+      THREADS 1)
 
-  cinch_add_unit(test_search_points_by_cells
-    SOURCES pairs.cc test/test_search_points_by_cells.cc
-    LIBRARIES portage_search 
-    POLICY MPI
-    THREADS 1)
+    cinch_add_unit(test_search_points_by_cells
+      SOURCES pairs.cc test/test_search_points_by_cells.cc
+      LIBRARIES portage_search
+      POLICY MPI
+      THREADS 1)
+  endif()
 
   if (nanoflann_FOUND)
     cinch_add_unit(test_search_kdtree_nanoflann
