--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cinch"]
-	path = cinch
-	url = ../../laristra/cinch.git
+[submodule "googletest"]
+	path = googletest
+	url = https://github.com/google/googletest
