replace cinch_add_unit with portage_add_unittest; get include paths right after cinch removal

--- a/portage/driver/CMakeLists.txt
+++ b/portage/driver/CMakeLists.txt
@@ -10,7 +10,7 @@ project(portage_driver)
 add_library(portage_driver INTERFACE)
 
 target_include_directories(portage_driver INTERFACE
-  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIRECTORY}>
+  $<BUILD_INTERFACE:${portage_BINARY_DIR}>
   $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
   $<INSTALL_INTERFACE:include>
   )
@@ -78,38 +78,38 @@ install(TARGETS portage_driver
 if (ENABLE_UNIT_TESTS)
 
    if (WONTON_ENABLE_Jali)
-       cinch_add_unit(test_driver
+       portage_add_unittest(test_driver
        SOURCES test/test_driver.cc 
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
-       cinch_add_unit(test_driver_multivar
+       portage_add_unittest(test_driver_multivar
        SOURCES test/test_driver_multivar.cc 
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
-       cinch_add_unit(test_mismatch_fixup
+       portage_add_unittest(test_mismatch_fixup
        SOURCES test/test_driver_mismatch_fixup.cc 
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
-       cinch_add_unit(test_mismatch_disjoint
+       portage_add_unittest(test_mismatch_disjoint
        SOURCES test/test_driver_mismatch_disjoint.cc
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
-       cinch_add_unit(test_driver_core_mismatch_fixup
+       portage_add_unittest(test_driver_core_mismatch_fixup
        SOURCES test/test_driver_core_mismatch_fixup 
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
        if (WONTON_ENABLE_KOKKOS)
-         cinch_add_unit(test_driver_swarm_distributed
+         portage_add_unittest(test_driver_swarm_distributed
          SOURCES test/test_driver_swarm_distributed.cc
          LIBRARIES portage_driver
          POLICY MPI
@@ -118,43 +118,43 @@ if (ENABLE_UNIT_TESTS)
 
      if (PORTAGE_HAS_TANGRAM)
 
-	 cinch_add_unit(test_driver_multimat
+	 portage_add_unittest(test_driver_multimat
 	   SOURCES test/test_driver_multimat.cc
 	   LIBRARIES portage_driver ${TANGRAM_LIBRARIES}
 	   POLICY MPI
 	   THREADS 1)
 	 
-	 cinch_add_unit(test_driver_multimat_second_order
+	 portage_add_unittest(test_driver_multimat_second_order
 	   SOURCES test/test_driver_multimat_second_order.cc
 	   LIBRARIES portage_driver ${TANGRAM_LIBRARIES}
 	   POLICY MPI
 	   THREADS 1)
 	 
-	 cinch_add_unit(test_driver_multimat_uber
+	 portage_add_unittest(test_driver_multimat_uber
 	   SOURCES test/test_driver_multimat_uber.cc
 	   LIBRARIES portage_driver ${TANGRAM_LIBRARIES}
 	   POLICY MPI
 	   THREADS 1)
 	 
-	 cinch_add_unit(test_driver_multimat_uber_swept
+	 portage_add_unittest(test_driver_multimat_uber_swept
 	   SOURCES test/test_driver_multimat_uber_swept.cc
 	   LIBRARIES portage_driver ${TANGRAM_LIBRARIES}
 	   POLICY MPI
 	   THREADS 1)
 
-	 cinch_add_unit(test_driver_multimat_uber_swept_mismatch
+	 portage_add_unittest(test_driver_multimat_uber_swept_mismatch
 	   SOURCES test/test_driver_multimat_uber_swept_mismatch.cc
 	   LIBRARIES portage_driver ${TANGRAM_LIBRARIES}
 	   POLICY MPI
 	   THREADS 1)
 
-       cinch_add_unit(test_driver_multimat_distributed
+       portage_add_unittest(test_driver_multimat_distributed
        SOURCES test/test_driver_multimat_distributed.cc
        LIBRARIES portage_driver ${TANGRAM_LIBRARIES}
        POLICY MPI
        THREADS 4)
 
-       cinch_add_unit(test_driver_multimat_uber_distributed
+       portage_add_unittest(test_driver_multimat_uber_distributed
        SOURCES test/test_driver_multimat_uber_distributed
        LIBRARIES portage_driver ${TANGRAM_LIBRARIES}
        POLICY MPI
@@ -162,19 +162,19 @@ if (ENABLE_UNIT_TESTS)
 
      endif ()
 
-     cinch_add_unit(test_driver_core_single_mat
+     portage_add_unittest(test_driver_core_single_mat
        SOURCES test/test_driver_core_single_mat.cc
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
-     cinch_add_unit(test_driver_part
+     portage_add_unittest(test_driver_part
        SOURCES test/test_driver_part.cc
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
-     cinch_add_unit(test_driver_part_mismatch
+     portage_add_unittest(test_driver_part_mismatch
        SOURCES test/test_driver_part_mismatch.cc
        LIBRARIES portage_driver
        POLICY MPI
@@ -183,19 +183,19 @@ if (ENABLE_UNIT_TESTS)
    endif ()
 
    if (WONTON_ENABLE_KOKKOS)
-     cinch_add_unit(test_driver_swarm
+     portage_add_unittest(test_driver_swarm
        SOURCES test/test_driver_swarm.cc
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
-     cinch_add_unit(test_driver_mesh_swarm_mesh
+     portage_add_unittest(test_driver_mesh_swarm_mesh
        SOURCES test/test_driver_mesh_swarm_mesh.cc
        LIBRARIES portage_driver
        POLICY MPI
        THREADS 1)
 
-     cinch_add_unit(test_driver_part_by_particle
+     portage_add_unittest(test_driver_part_by_particle
        SOURCES test/test_driver_part_by_particle
        LIBRARIES portage_driver
        POLICY MPI
