--- a/portage/search/CMakeLists.txt
+++ b/portage/search/CMakeLists.txt
@@ -30,7 +30,7 @@ if (WONTON_ENABLE_KOKKOS)
   set(search_SOURCES pairs.cc)
 
   target_include_directories(portage_search PUBLIC
-      $<BUILD_INTERFACE:${PROJECT_SOURCE_DIRECTORY}>
+      $<BUILD_INTERFACE:${portage_BINARY_DIR}>
       $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
       $<INSTALL_INTERFACE:include>)
 
@@ -43,7 +43,7 @@ else()
   add_library(portage_search INTERFACE)
 
   target_include_directories(portage_search INTERFACE
-      $<BUILD_INTERFACE:${PROJECT_SOURCE_DIRECTORY}>
+      $<BUILD_INTERFACE:${portage_BINARY_DIR}>
       $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
       $<INSTALL_INTERFACE:include>)
 
@@ -63,39 +63,39 @@ install(TARGETS portage_search
 
 # Add unit test
 if(ENABLE_UNIT_TESTS)
-   cinch_add_unit(test_search_direct_product
+   portage_add_unittest(test_search_direct_product
     SOURCES test/test_search_direct_product.cc
     LIBRARIES portage_search 
     POLICY SERIAL)
   
-   cinch_add_unit(test_search_simple
+   portage_add_unittest(test_search_simple
     SOURCES test/test_search_simple.cc
     LIBRARIES portage_search  
     POLICY SERIAL)
   
-  cinch_add_unit(test_search_kdtree2
+  portage_add_unittest(test_search_kdtree2
     SOURCES test/test_search_kdtree2.cc
     LIBRARIES portage_search  
     POLICY SERIAL)
 
-  cinch_add_unit(test_search_kdtree3
+  portage_add_unittest(test_search_kdtree3
     SOURCES test/test_search_kdtree3.cc
     LIBRARIES portage_search 
     POLICY SERIAL)
 
-  cinch_add_unit(test_search_swept_face
+  portage_add_unittest(test_search_swept_face
     SOURCES test/test_search_swept_face.cc
     LIBRARIES portage_search 
     POLICY SERIAL)
 
   if (WONTON_ENABLE_KOKKOS)
-    cinch_add_unit(test_search_simple_points
+    portage_add_unittest(test_search_simple_points
       SOURCES test/test_search_simple_points.cc
       LIBRARIES portage_search
       POLICY MPI
       THREADS 1)
 
-    cinch_add_unit(test_search_points_by_cells
+    portage_add_unittest(test_search_points_by_cells
       SOURCES pairs.cc test/test_search_points_by_cells.cc
       LIBRARIES portage_search
       POLICY MPI
@@ -103,7 +103,7 @@ if(ENABLE_UNIT_TESTS)
   endif()
 
   if (nanoflann_FOUND)
-    cinch_add_unit(test_search_kdtree_nanoflann
+    portage_add_unittest(test_search_kdtree_nanoflann
       SOURCES test/test_search_kdtree_nanoflann.cc
       LIBRARIES portage_search 
       POLICY MPI
