Enable particle kernels and drivers

--- a/portage/support/CMakeLists.txt
+++ b/portage/support/CMakeLists.txt
@@ -18,17 +18,12 @@ target_include_directories(portage_support INTERFACE
 set(portage_support_HEADERS
     portage.h
     timer.h
-    mpi_collate.h)
-
-if (WONTON_ENABLE_KOKKOS)
-  set(portage_support_HEADERS
-      ${portage_support_HEADERS}
-      weight.h
-      basis.h
-      operator.h
-      operator_references.h
-      faceted_setup.h)
-endif ()
+    mpi_collate.h
+    weight.h
+    basis.h
+    operator.h
+    operator_references.h
+    faceted_setup.h)
 
 # Not yet allowed for INTERFACE libraries
 # 
@@ -69,7 +64,7 @@ install(TARGETS portage_support
 
 # Unit tests
 
-if (WONTON_ENABLE_KOKKOS AND ENABLE_UNIT_TESTS)
+if (ENABLE_UNIT_TESTS)
 
   portage_add_unittest(test_weight
     SOURCES test/test_weight.cc
