--- a/portage/driver/CMakeLists.txt
+++ b/portage/driver/CMakeLists.txt
@@ -10,8 +10,8 @@ project(portage_driver)
 add_library(portage_driver INTERFACE)
 
 target_include_directories(portage_driver INTERFACE
+  $<BUILD_INTERFACE:${portage_SOURCE_DIR}>
   $<BUILD_INTERFACE:${portage_BINARY_DIR}>
-  $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
   $<INSTALL_INTERFACE:include>
   )
 
