--- a/portage/distributed/CMakeLists.txt
+++ b/portage/distributed/CMakeLists.txt
@@ -10,8 +10,8 @@ project(portage_distribute)
 add_library(portage_distribute INTERFACE)
 
 target_include_directories(portage_distribute INTERFACE
+  $<BUILD_INTERFACE:${portage_SOURCE_DIR}>
   $<BUILD_INTERFACE:${portage_BINARY_DIR}>
-  $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
   $<INSTALL_INTERFACE:include>
   )
 
