--- a/portage/estimate/CMakeLists.txt
+++ b/portage/estimate/CMakeLists.txt
@@ -9,8 +9,8 @@ project(portage_estimate)
 add_library(portage_estimate INTERFACE)
 
 target_include_directories(portage_accumulate INTERFACE
+  $<BUILD_INTERFACE:${portage_SOURCE_DIR}>
   $<BUILD_INTERFACE:${portage_BINARY_DIR}>
-  $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
   $<INSTALL_INTERFACE:include>
   )
 
