--- a/portage/support/CMakeLists.txt
+++ b/portage/support/CMakeLists.txt
@@ -10,8 +10,8 @@ project(portage_support)
 add_library(portage_support INTERFACE)
 
 target_include_directories(portage_support INTERFACE
+  $<BUILD_INTERFACE:${portage_SOURCE_DIR}>
   $<BUILD_INTERFACE:${portage_BINARY_DIR}>
-  $<BUILD_INTERFACE:${PROJECT_BINARY_DIRECTORY}>
   $<INSTALL_INTERFACE:include>)
 
 # Add header files
