Fix disabled Jali

--- a/portage/distributed/CMakeLists.txt
+++ b/portage/distributed/CMakeLists.txt
@@ -46,7 +46,7 @@ install(TARGETS portage_distribute
 
 
 if (ENABLE_UNIT_TESTS)
-  if (WONTON_HAS_Jali)
+  if (WONTON_ENABLE_Jali)
     portage_add_unittest(test_mpi_bounding_boxes
                    SOURCES test/test_mpi_bounding_boxes.cc
                    LIBRARIES portage_distributed
