--- a/portage/distributed/CMakeLists.txt
+++ b/portage/distributed/CMakeLists.txt
@@ -49,13 +49,13 @@ if (ENABLE_UNIT_TESTS)
   if (WONTON_ENABLE_Jali)
     portage_add_unittest(test_mpi_bounding_boxes
                    SOURCES test/test_mpi_bounding_boxes.cc
-                   LIBRARIES portage_distributed
+                   LIBRARIES portage_distribute
                    POLICY MPI
                    THREADS 4)
 
     portage_add_unittest(test_mpi_particle_distribute
                    SOURCES test/test_mpi_particle_distribute.cc
-                   LIBRARIES portage_distributed
+                   LIBRARIES portage_distribute
                    POLICY MPI
                    THREADS 4)
   endif ()
